# c-basic

./: CMakeLists.txt  array.c  array.h  ex.h  grid.c  grid.h  hash.c  hash.h  list.c  list.h  macro.h  main.c  memory.h  random.c  random.h  run.sh  size.h  type.h
